--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "iamkaizen <kimsokhom654@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "4.19.2"
   },
   "devDependencies": {
     "chai": "^6.2.0",
