--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "2",
     "chai": "^6.2.0",
-    "eslint": "^9.39.0",
+    "eslint": "8",
     "mocha": "^11.7.4",
     "supertest": "^7.1.4"
   },
@@ -18,6 +19,5 @@
     "start": "node server.js",
     "test": "mocha --exit",
     "lint": "eslint . --ext .js"
-  },
-  "type": "module"
+  }
 }
