--- a/package.json
+++ b/package.json
@@ -13,11 +13,23 @@
     "chai": "^6.2.0",
     "eslint": "8",
     "mocha": "^11.7.4",
+    "nyc": "^17.1.0",
     "supertest": "^7.1.4"
   },
   "scripts": {
     "start": "node server.js",
     "test": "mocha --exit",
-    "lint": "eslint . --ext .js"
+    "lint": "eslint . --ext .js",
+    "coverage": "nyc --reporter=text --reporter=lcov yarn test"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "**/*.js"
+    ],
+    "exclude": [
+      "test/**",
+      "node_modules/**"
+    ]
   }
 }
